--- a/src/AdminLostFoundDashboard.html
+++ b/src/AdminLostFoundDashboard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ComplaNet — Admin Dashboard</title>
+    <title>ComplaNet — Lost & Found Dashboard</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -21,10 +21,9 @@
 
         <!-- Desktop Navigation -->
         <nav class="hidden md:flex space-x-6 items-center">
-            <a href="AdminDashboard.html"
-                class="font-semibold text-eco-dark hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">Dashboard</a>
-            <a href="AllComplaints.html" id="navAllComplaints" class="nav-content">All Complaints</a>
-            <a href="Analytics.html" class="nav-content">Analytics</a>
+            <a href="AdminLostFoundDashboard.html" class="font-semibold text-eco-dark hover:text-eco-dark">Dashboard</a>
+            <a href="AdminLostFound.html" class="nav-content">Lost Items</a>
+            <!-- No All Complaints here -->
 
             <!-- Profile Menu -->
             <div class="relative">
@@ -55,10 +54,9 @@
                 <img src="../images/BGlessLogoDark.png" alt="Logo" class="h-10">
             </div>
             <nav class="mt-6 flex flex-col space-y-2 px-6">
-                <a href="AdminDashboard.html"
-                    class="font-semibold text-eco-dark hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">Dashboard</a>
-                <a href="AllComplaints.html" id="mobileNavAllComplaints" class="nav-content">All Complaints</a>
-                <a href="Analytics.html" class="nav-content">Analytics</a>
+                <a href="AdminLostFoundDashboard.html"
+                    class="font-semibold text-eco-dark hover:text-eco-dark">Dashboard</a>
+                <a href="AdminLostFound.html" class="nav-content">Lost Items</a>
                 <a href="AdminProfile.html" class="nav-content">Admin Profile</a>
             </nav>
         </div>
@@ -75,76 +73,75 @@
 
         <!-- Welcome message -->
         <div class="mb-8">
-            <h1 class="text-3xl font-bold mb-2" id="welcomeTitle">Admin Dashboard</h1>
+            <h1 class="text-3xl font-bold mb-2" id="welcomeTitle">Lost & Found Dashboard</h1>
             <p class="text-gray-600 dark:text-gray-300" id="welcomeSubtitle">
-                Manage and monitor all university complaints from this central dashboard.
+                Manage reported lost items, claims, and returns.
             </p>
         </div>
 
         <!-- Statistics Cards -->
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-5 gap-4 md:gap-6 mb-10">
-            <!-- Total Complaints -->
+            <!-- Total Items -->
             <div
                 class="dashboard-card-total text-white rounded-xl shadow-lg p-6 hover:shadow-xl transition-all duration-300 hover:-translate-y-1">
                 <div class="flex items-center justify-between">
                     <div>
-                        <p class="text-blue-100 text-sm font-medium mb-1">Total Complaints</p>
+                        <p class="text-blue-100 text-sm font-medium mb-1">Total Items</p>
                         <h3 class="text-3xl font-bold" id="totalCount">0</h3>
                     </div>
                     <div class="bg-white bg-opacity-20 rounded-full p-3">
-                        <i class="fas fa-clipboard-list text-2xl"></i>
+                        <i class="fas fa-boxes text-2xl"></i>
                     </div>
                 </div>
             </div>
 
-            <!-- Pending Complaints -->
-            <div class="dashboard-card-pending text-white rounded-xl shadow-lg p-6 hover:shadow-xl transition-all duration-300 hover:-translate-y-1 cursor-pointer"
-                onclick="navigateToComplaints('Pending')">
+            <!-- Lost -->
+            <div class="bg-red-500 text-white rounded-xl shadow-lg p-6 hover:shadow-xl transition-all duration-300 hover:-translate-y-1 cursor-pointer"
+                onclick="window.location.href='AdminLostFound.html?status=Lost'">
                 <div class="flex items-center justify-between">
                     <div>
-                        <p class="text-yellow-100 text-sm font-medium mb-1">Pending</p>
-                        <h3 class="text-3xl font-bold" id="pendingCount">0</h3>
+                        <p class="text-red-100 text-sm font-medium mb-1">Lost (Reported)</p>
+                        <h3 class="text-3xl font-bold" id="lostCount">0</h3>
                     </div>
                     <div class="bg-white bg-opacity-20 rounded-full p-3">
-                        <i class="fas fa-clock text-2xl"></i>
+                        <i class="fas fa-search text-2xl"></i>
                     </div>
                 </div>
             </div>
 
-            <!-- In-Progress Complaints -->
-            <div class="dashboard-card-progress text-white rounded-xl shadow-lg p-6 hover:shadow-xl transition-all duration-300 hover:-translate-y-1 cursor-pointer"
-                onclick="navigateToComplaints('In-Progress')">
+            <!-- Claim (Match Found) -->
+            <div class="bg-yellow-500 text-white rounded-xl shadow-lg p-6 hover:shadow-xl transition-all duration-300 hover:-translate-y-1 cursor-pointer"
+                onclick="window.location.href='AdminLostFound.html?status=Claim'">
                 <div class="flex items-center justify-between">
                     <div>
-                        <p class="text-purple-100 text-sm font-medium mb-1">In Progress</p>
-                        <h3 class="text-3xl font-bold" id="inProgressCount">0</h3>
+                        <p class="text-yellow-100 text-sm font-medium mb-1">Claim (Match)</p>
+                        <h3 class="text-3xl font-bold" id="claimCount">0</h3>
                     </div>
                     <div class="bg-white bg-opacity-20 rounded-full p-3">
-                        <i class="fas fa-spinner text-2xl"></i>
+                        <i class="fas fa-hand-holding text-2xl"></i>
                     </div>
                 </div>
             </div>
 
-            <!-- Resolved Complaints -->
-            <div class="dashboard-card-resolved text-white rounded-xl shadow-lg p-6 hover:shadow-xl transition-all duration-300 hover:-translate-y-1 cursor-pointer"
-                onclick="navigateToComplaints('Resolved')">
+            <!-- Found (Returned) -->
+            <div class="bg-green-500 text-white rounded-xl shadow-lg p-6 hover:shadow-xl transition-all duration-300 hover:-translate-y-1 cursor-pointer"
+                onclick="window.location.href='AdminLostFound.html?status=Found'">
                 <div class="flex items-center justify-between">
                     <div>
-                        <p class="text-green-100 text-sm font-medium mb-1">Resolved</p>
-                        <h3 class="text-3xl font-bold" id="resolvedCount">0</h3>
+                        <p class="text-green-100 text-sm font-medium mb-1">Found (Returned)</p>
+                        <h3 class="text-3xl font-bold" id="foundCount">0</h3>
                     </div>
                     <div class="bg-white bg-opacity-20 rounded-full p-3">
-                        <i class="fas fa-check-circle text-2xl"></i>
+                        <i class="fas fa-check-double text-2xl"></i>
                     </div>
                 </div>
             </div>
 
-            <!-- Deleted Complaints -->
-            <div
-                class="bg-red-500 text-white rounded-xl shadow-lg p-6 hover:shadow-xl transition-all duration-300 hover:-translate-y-1 cursor-default">
+            <!-- Deleted -->
+            <div class="bg-gray-500 text-white rounded-xl shadow-lg p-6">
                 <div class="flex items-center justify-between">
                     <div>
-                        <p class="text-red-100 text-sm font-medium mb-1">Deleted</p>
+                        <p class="text-gray-100 text-sm font-medium mb-1">Deleted</p>
                         <h3 class="text-3xl font-bold" id="deletedCount">0</h3>
                     </div>
                     <div class="bg-white bg-opacity-20 rounded-full p-3">
@@ -161,8 +158,8 @@
             <div class="lg:col-span-2 bg-white dark:bg-gray-800 rounded-xl shadow-lg p-6">
                 <div class="flex justify-between items-center mb-6">
                     <h2 class="text-xl font-bold text-gray-800 dark:text-gray-200">Recent Activity</h2>
-                    <a href="AllComplaints.html"
-                        class="text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300 text-sm font-semibold">View
+                    <a href="AdminLostFound.html"
+                        class="text-eco-dark dark:text-eco hover:text-eco-dark text-sm font-semibold">View
                         All</a>
                 </div>
                 <div class="overflow-x-auto hidden md:block">
@@ -170,9 +167,9 @@
                         <thead
                             class="text-gray-500 dark:text-gray-400 uppercase text-xs leading-normal border-b dark:border-gray-700">
                             <tr>
-                                <th class="py-3 px-6 text-left">Title</th>
-                                <th class="py-3 px-6 text-left">Category</th>
-                                <th class="py-3 px-6 text-left">Date</th>
+                                <th class="py-3 px-6 text-left">Item Name</th>
+                                <th class="py-3 px-6 text-left">Type</th>
+                                <th class="py-3 px-6 text-left">Reported Date</th>
                                 <th class="py-3 px-6 text-center">Status</th>
                                 <th class="py-3 px-6 text-center">Actions</th>
                             </tr>
@@ -205,7 +202,7 @@
                         </div>
                         <div class="pt-2 border-t dark:border-gray-700 text-right">
                             <a href="#"
-                                class="card-link text-blue-700 hover:text-blue-900 dark:text-blue-400 dark:hover:text-blue-300 text-xs font-semibold uppercase tracking-wide">
+                                class="card-link text-blue-500 hover:text-blue-600 text-xs font-semibold uppercase tracking-wide">
                                 View Details →
                             </a>
                         </div>
@@ -227,17 +224,16 @@
                         </td>
                         <td class="py-3 px-6 text-center">
                             <a href="#"
-                                class="col-link text-blue-700 hover:text-blue-900 dark:text-blue-400 dark:hover:text-blue-300 hover:underline text-xs font-medium">View
+                                class="col-link text-blue-500 hover:text-blue-700 hover:underline text-xs font-medium">View
                                 Details</a>
                         </td>
                     </tr>
                 </template>
             </div>
 
-            <!-- Personal Notepad Widget (Takes up 1 column) -->
+            <!-- Personal Notepad Widget (Same as other dashboard) -->
             <div
                 class="bg-yellow-50 dark:bg-gray-700 rounded-xl shadow-lg p-6 flex flex-col h-full border-t-4 border-yellow-400 relative overflow-hidden group">
-                <!-- Background decoration -->
                 <i
                     class="fas fa-sticky-note absolute -bottom-4 -right-4 text-8xl text-yellow-500 opacity-10 dark:opacity-20 transform rotate-12 group-hover:rotate-0 transition-transform duration-500"></i>
 
@@ -254,7 +250,7 @@
                 <div class="flex-grow relative z-10">
                     <textarea id="adminNotepad"
                         class="w-full h-full min-h-[300px] lg:min-h-0 bg-transparent border-none resize-none focus:ring-0 text-gray-700 dark:text-gray-200 text-sm leading-relaxed placeholder-gray-400 dark:placeholder-gray-500 font-medium"
-                        placeholder="Write your quick reminders here...&#10;- Call Maintenance Team&#10;- Check Ticket #42&#10;- Review Weekly Report"></textarea>
+                        placeholder="Write your quick reminders here...&#10;- Call Security&#10;- Check Lost & Found Log"></textarea>
                 </div>
                 <p class="text-[10px] text-gray-400 dark:text-gray-500 mt-2 text-center">
                     Stored locally on your device
@@ -265,18 +261,20 @@
     </main>
 
     <!-- Footer -->
+    <!-- Footer -->
     <footer
         class="w-full py-10 mt-10 bg-[var(--color-eco-light)] text-[var(--color-text-light)] dark:bg-[#0F1A24] dark:text-gray-200">
 
         <div class="max-w-4xl mx-auto px-6">
 
-            <!-- ComplaNet Admin Title -->
+            <!-- ComplaNet Lost & Found Admin Title -->
             <div class="text-center mb-8">
                 <h2 class="text-2xl font-heading font-bold mb-3 text-[var(--color-blue-btn)] dark:text-blue-400">
-                    ComplaNet Admin
+                    ComplaNet Lost & Found
                 </h2>
                 <p class="text-sm leading-6 opacity-80 max-w-2xl mx-auto">
-                    Administrative portal for managing university complaints. Monitor, assign, and resolve complaints
+                    Administrative portal for managing university lost and found items. Monitor, verify, and resolve
+                    reports
                     efficiently.
                 </p>
             </div>
@@ -288,24 +286,17 @@
                 </h3>
                 <ul class="flex flex-wrap justify-center gap-6 text-sm">
                     <li>
-                        <a href="./AdminDashboard.html"
+                        <a href="./AdminLostFoundDashboard.html"
                             class="inline-flex items-center gap-2 text-gray-800 hover:text-blue-700 dark:text-gray-300 dark:hover:text-blue-400 transition-all duration-300 hover:-translate-y-1">
                             <i class="fas fa-tachometer-alt"></i>
                             <span>Dashboard</span>
                         </a>
                     </li>
                     <li>
-                        <a href="AllComplaints.html"
+                        <a href="AdminLostFound.html"
                             class="inline-flex items-center gap-2 text-gray-800 hover:text-blue-700 dark:text-gray-300 dark:hover:text-blue-400 transition-all duration-300 hover:-translate-y-1">
-                            <i class="fas fa-list-alt"></i>
-                            <span>All Complaints</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="Analytics.html"
-                            class="inline-flex items-center gap-2 text-gray-800 hover:text-blue-700 dark:text-gray-300 dark:hover:text-blue-400 transition-all duration-300 hover:-translate-y-1">
-                            <i class="fas fa-chart-line"></i>
-                            <span>Analytics</span>
+                            <i class="fas fa-search"></i>
+                            <span>Lost Items</span>
                         </a>
                     </li>
                 </ul>
@@ -315,9 +306,10 @@
                 © 2025 ComplaNet. All rights reserved.
             </div>
 
+        </div>
     </footer>
 
-    <!-- Logout Confirmation Modal -->
+    <!-- Logout Confirmation Modal (Same) -->
     <div id="logoutModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-[60] hidden">
         <div
             class="bg-white dark:bg-gray-800 rounded-lg shadow-xl p-6 w-11/12 max-w-sm transform transition-all scale-100">
@@ -337,7 +329,7 @@
     </div>
 
     <script type="module" src="./darkMode.js"></script>
-    <script type="module" src="./admin-dashboard.js"></script>
+    <script type="module" src="./admin-lost-found-dashboard.js"></script>
 
 </body>
 
