--- a/src/FacilityForm.html
+++ b/src/FacilityForm.html
@@ -27,8 +27,10 @@
     <!-- Desktop Navigation -->
     <nav class="hidden md:flex space-x-6 items-center">
       <a href="UserDashboard.html" class="nav-content">Dashboard</a>
-      <a href="Newcomplaint.html" class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">New Complaint</a>
+      <a href="Newcomplaint.html"
+        class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">New Complaint</a>
       <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
+      <a href="LostAndFound.html" class="nav-content">Report Lost</a>
 
       <!-- Profile Menu -->
       <div class="relative">
@@ -62,8 +64,11 @@
       </div>
       <nav class="mt-6 flex flex-col space-y-2 px-6">
         <a href="UserDashboard.html" class="nav-content">Dashboard</a>
-        <a href="Newcomplaint.html" class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">New Complaint</a>
+        <a href="Newcomplaint.html"
+          class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">New
+          Complaint</a>
         <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
+        <a href="LostAndFound.html" class="nav-content">Report Lost</a>
         <a href="Profile.html" class="nav-content">View Profile</a>
       </nav>
     </div>
@@ -226,12 +231,9 @@
           Quick Navigation
         </h2>
         <ul class="space-y-2 text-sm">
-          <li><a href="./UserDashboard.html"
-              class="hover:text-blue-700 dark:hover:text-blue-400">Dashboard</a></li>
-          <li><a href="./Newcomplaint.html"
-              class="hover:text-blue-700 dark:hover:text-blue-400">New Complaint</a></li>
-          <li><a href="./Mycomplaint.html"
-              class="hover:text-blue-700 dark:hover:text-blue-400">My Complaints</a></li>
+          <li><a href="./UserDashboard.html" class="hover:text-blue-700 dark:hover:text-blue-400">Dashboard</a></li>
+          <li><a href="./Newcomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">New Complaint</a></li>
+          <li><a href="./Mycomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">My Complaints</a></li>
         </ul>
       </div>
 
@@ -251,10 +253,12 @@
 
           <ul class="mt-3 space-y-2 pl-3">
             <li><a href="./AcademicForm.html"
-                class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Academic Complaint</a>
+                class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Academic
+                Complaint</a>
             </li>
             <li><a href="./FacilityForm.html"
-                class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Facility Complaint</a>
+                class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Facility
+                Complaint</a>
             </li>
             <li><a href="./AdministrativeForm.html"
                 class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Administrative
@@ -263,10 +267,12 @@
                 class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Student Behavior
                 Complaint</a></li>
             <li><a href="./TechnicalForm.html"
-                class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Technical Complaint</a>
+                class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Technical
+                Complaint</a>
             </li>
             <li><a href="./OtherForm.html"
-                class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Other Complaint</a></li>
+                class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Other Complaint</a>
+            </li>
           </ul>
         </details>
       </div>
