--- a/src/Newcomplaint.html
+++ b/src/Newcomplaint.html
@@ -30,6 +30,7 @@
       <a href="Newcomplaint.html"
         class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">New Complaint</a>
       <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
+      <a href="LostAndFound.html" class="nav-content">Report Lost</a>
 
 
 
@@ -69,6 +70,7 @@
           class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">New
           Complaint</a>
         <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
+        <a href="LostAndFound.html" class="nav-content">Report Lost</a>
         <a href="Profile.html" class="nav-content">View Profile</a>
       </nav>
     </div>
@@ -171,6 +173,7 @@
             Complaints not fitting in any of the above categories.</p>
         </div>
       </a>
+
 
     </div>
   </main>
