--- a/src/Notifications.html
+++ b/src/Notifications.html
@@ -27,6 +27,7 @@
                 <a href="UserDashboard.html" class="nav-content">Dashboard</a>
                 <a href="Newcomplaint.html" class="nav-content">New Complaint</a>
                 <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
+                <a href="LostAndFound.html" class="nav-content">Report Lost</a>
             </nav>
 
             <!-- Notification Bell (Always Visible) -->
@@ -75,6 +76,7 @@
                     class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">Notifications</a>
                 <a href="Newcomplaint.html" class="nav-content">New Complaint</a>
                 <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
+                <a href="LostAndFound.html" class="nav-content">Lost & Found</a>
                 <a href="Profile.html" class="nav-content">View Profile</a>
             </nav>
         </div>
