--- a/src/Profile.html
+++ b/src/Profile.html
@@ -24,6 +24,7 @@
       <a href="UserDashboard.html" class="nav-content">Dashboard</a>
       <a href="Newcomplaint.html" class="nav-content">New Complaint</a>
       <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
+      <a href="LostAndFound.html" class="nav-content">Report Lost</a>
 
       <div class="relative">
         <button id="profileButton" class="flex items-center space-x-2 focus:outline-none">
@@ -34,7 +35,8 @@
           <a href="Profile.html"
             class="block px-4 py-2 text-gray-700 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-700">View
             Profile</a>
-          <a href="Login.html" class="block px-4 py-2 text-red-600 hover:bg-gray-100 dark:hover:bg-gray-700">Log Out</a>
+          <a href="javascript:void(0)" id="headerLogoutBtn"
+            class="block px-4 py-2 text-red-600 hover:bg-gray-100 dark:hover:bg-gray-700">Log Out</a>
         </div>
       </div>
     </nav>
@@ -54,13 +56,14 @@
         <a href="UserDashboard.html" class="nav-content">Dashboard</a>
         <a href="Newcomplaint.html" class="nav-content">New Complaint</a>
         <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
+        <a href="LostAndFound.html" class="nav-content">Report Lost</a>
         <a href="Profile.html"
           class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">View
           Profile</a>
       </nav>
     </div>
     <div class="px-6 py-4 border-t dark:border-gray-700 flex flex-col space-y-2">
-      <a href="Login.html" class="block py-2 hover:text-red-500 transition">Log Out</a>
+      <a href="javascript:void(0)" id="mobileLogoutBtn" class="block py-2 hover:text-red-500 transition">Log Out</a>
     </div>
   </aside>
 
@@ -84,7 +87,7 @@
         <p id="department" class="mt-2 text-sm text-gray-500 dark:text-gray-400"></p>
         <p id="role" class="text-sm text-gray-500 dark:text-gray-400"></p>
 
-        <a href="Login.html"
+        <a href="javascript:void(0)" id="profileLogoutBtn"
           class="mt-4 w-full text-center px-4 py-2 bg-red-600 text-white rounded-md hover:bg-red-700 transition font-semibold">Log
           Out</a>
         <button id="darkModeToggle"
